# commomacrossoverbacktest

commomacrossoverbacktest/: .transaction_log 2.csv.icloud  .transaction_log.csv.icloud  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
commomacrossoverbacktest/.github/workflows/: ci-cd.yml
commomacrossoverbacktest/backtests/: .SilverCobraDoctor_transactions.csv.icloud  .SilverFalconPhotographer_transactions.csv.icloud  SilverCobraDoctor_portfolio.csv  SilverFalconPhotographer_portfolio.csv
commomacrossoverbacktest/docs/: Makefile  conf.py  example.ipynb  make.bat
commomacrossoverbacktest/src/commomacrossoverbacktest/: commo_backtest.py  commo_broker  commo_informations.py  exponentialmovingaverage.py
commomacrossoverbacktest/tests/: test_commo_broker.py  test_commo_informations.py  test_commomacrossoverbacktest.py  test_exponential_moving_average.py  test_signals.py
